customer-apps/simplenodeservice-team10001-intruder-special/namespace.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: "simplenodeservice-team10001-intruder-special"
  labels:
    dt.owner: "team10001"
  annotations:
    keptn.sh/lifecycle-toolkit: "enabled"
