customer-apps/simplenodeservice-team10001-intruder-special/rollout.yml
---
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: "simplenodeservice-team10001"
  namespace: "simplenodeservice-team10001-intruder-special"
  labels:
    dt.owner: "team10001"
spec:
  replicas: 2
  strategy:
    canary:
      steps:
      - setWeight: 50
      - pause: {duration: 5s}
      - setWeight: 100
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app.kubernetes.io/name: userinterface
  template:
    metadata:
      labels:
        dt.owner: "team10001"
        app.kubernetes.io/name: userinterface
        app.kubernetes.io/part-of: "simplenodeservice-team10001"
        app.kubernetes.io/version: "4.0.24"
        dynatrace-release-stage: "intruder-special"
        backstage.io/component: "default.simplenodeservice-team10001-intruder-special"
    spec:
      containers:
      - name: rollouts-demo
        image: grabnerandi/simplenodeservice:4.0.24
        ports:
        - name: http
          containerPort: 8080
          protocol: TCP
        resources:
          requests:
            memory: 3Mi
            cpu: 5m
