customer-apps/simplenodeservice-team10001-intruder-special/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: "simplenodeservice-team10001"
  namespace: "simplenodeservice-team10001-intruder-special"
  labels:
    dt.owner: "team10001"
spec:
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app.kubernetes.io/name: "userinterface"
